--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -73,6 +73,12 @@ img[alt="Tim Peters"] {
 	margin: 4.5em auto 0 auto;
 }
 
+@media (max-width: 38em) {
+	.container {
+		max-width: 92%;
+	}
+}
+
 .posts {
 	padding: 0;
 }
